# NLPKeyValueExtractorFromDocuments

./: .replit  NLPKeyValueExtractor.code-workspace  README.md  VSCODE_TASKS.md  absolute_path_test.py  advanced_models.py  autocommit.sh  confidence_scorer.py  db.sqlite3  docs_folder_test.py  document_processor.py  dynamic_extractor.py  enhanced_main.py  enhanced_simple.py  git-integration-fix.md  main.py  main_simple.py  manage.py  markdown_sample.md  minimal_fastapi_launcher.py  minimal_http.py  minimal_test.py  models.py  multi_technique_extractor.py  multi_technique_extractor_simple.py  network_diagnostics.py  nlp_extractor.py  output_test.py  pyproject.toml  quick-commit.sh  replit-git-guide.md  requirements-layoutlm.txt  requirements.txt  run_app.py  run_with_venv.bat  sample_document.txt  sample_test.md  setup-git-automation.sh  simple-git-solution.sh  simple_django_launcher.py  (+15 more)
attached_assets/: Pasted--Phase-2-Advanced-NLP-Template-Recognition-Prompt-Copy-and-paste-this-into-Replit-to-enhance-1750331950057_1750331950068.txt  Pasted--Replit-Prompt-Enhanced-Document-Processing-Engine-Copy-and-paste-this-prompt-into-Replit-to--1750339404637_1750339404638.txt
core/: __init__.py  document_processor.py  image_processor.py  ocr_processor.py  quality_assessor.py  table_extractor.py
dashboard/: urls.py  views.py
frontend/: manage.py
layoutlm/: __init__.py  processor.py  urls.py
models/: __init__.py  document_models.py
nlp_dashboard/: asgi.py  settings.py  urls.py  wsgi.py
processors/: __init__.py  docx_processor.py  html_processor.py  pdf_processor.py  (+1 more)
(+25 files in other folders)
