[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "docx2txt>=0.9",
    "fastapi>=0.115.13",
    "pdfplumber>=0.11.7",
    "pydantic>=2.11.7",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "spacy>=3.8.7",
    "uvicorn>=0.34.3",
]
